basiliq/src/serve/tests/requests/select/obj/snapshots/basiliq__serve__tests__requests__select__obj__include__include_rel_m2o.snap
---
source: basiliq/src/serve/tests/requests/select/obj/include.rs
expression: res

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": {
    "type": "public__peoples",
    "id": "1649b1e9-8a5f-4f52-b331-c07ce3bccc6f",
    "attributes": {
      "age": 22,
      "first-name": "Francis",
      "gender": "M",
      "last-name": "Le Roy",
      "twitter": null
    },
    "relationships": {
      "public__favorite_color": {
        "data": {
          "type": "public__favorite_color",
          "id": "9302b136-69ef-4f0d-b907-10593ff7e578"
        }
      }
    }
  },
  "included": [
    {
      "type": "public__favorite_color",
      "id": "9302b136-69ef-4f0d-b907-10593ff7e578",
      "attributes": {
        "color": "red"
      }
    }
  ]
}
